--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Dog&Cat</h1>
     <p>ไอ้ต้าวน้องหมา ไอ้ต้าวน้องแมว</p>
-    <a href="https://www.youtube.com/watch?v=wtH-hdOF1uA">youtube</a>
+    <a href="https://www.youtube.com/watch?v=wtH-hdOF1uA">Youtube</a>
 
 </body>
 </html>
