--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -6,6 +6,9 @@
     <h1>Dog&Cat</h1>
     <p>ไอ้ต้าวน้องหมา ไอ้ต้าวน้องแมว</p>
     <a href="https://www.youtube.com/watch?v=wtH-hdOF1uA">Youtube</a>
+    <div>
+        ทดสอบข้อความ
+    </div>
 
 </body>
 </html>
