--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -6,9 +6,10 @@
     <h1>Dog&Cat</h1>
     <p>ไอ้ต้าวน้องหมา ไอ้ต้าวน้องแมว</p>
     <a href="https://www.youtube.com/watch?v=wtH-hdOF1uA">Youtube</a>
-    <div>
+    <div width="100" style="text-align:right">
         ทดสอบข้อความ
     </div>
+    <besefont size = "2"> ข้อความ </font>
 
 </body>
 </html>
