--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -9,7 +9,7 @@
     <div width="100" style="text-align:right">
         ทดสอบข้อความ
     </div>
-    <besefont size = "2"> ข้อความ </font>
+    <besefont size = "40"> DOg Dog Dog </font>
 
 </body>
 </html>
