--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -11,6 +11,11 @@
     </div>
     <besefont size = "150"> Dog </besefont>
     <tt> พิมดีด </tt>
+    <TITLE>การแบ่งจอภาพ ( FRAME )</TITLE> 
+<FRAMESET ROWS="20%,*">
+<FRAME src="logo.html" >
+<FRAME src="main.html">
+</FRAMESET>
 
 </body>
 </html>
