--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -11,11 +11,10 @@
     </div>
     <besefont size = "150"> Dog </besefont>
     <tt> พิมดีด </tt>
-    <TITLE>การแบ่งจอภาพ ( FRAME )</TITLE> 
-<FRAMESET ROWS="20%,*">
-<FRAME src="logo.html" >
-<FRAME src="main.html">
-</FRAMESET>
-
+    
+    <form>
+        รหัสผ่าน: <input type="password" name="pwd">
+        </form> 
+        
 </body>
 </html>
