--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -15,6 +15,13 @@
     <form>
         รหัสผ่าน: <input type="password" name="pwd">
         </form> 
-        
+
 </body>
+<TITLE>การแบ่งจอภาพ ( FRAME )</TITLE> 
+<FRAMESET COLS="100,600">
+<FRAME src="menu.html" >
+        <FRAMESET ROWS="20%,*">
+         <FRAME src="logo.html" >
+         <FRAME src="main.html">
+</FRAMESET>
 </html>
