--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -17,11 +17,11 @@
         </form> 
 
 </body>
-<TITLE>การแบ่งจอภาพ (FRAME)</TITLE> 
-<FRAMESET COLS="100,600">
+<title>การแบ่งจอภาพ (FRAME)</title> 
+<frameset COLS="100,600">
 <FRAME src="menu.html" >
-        <FRAMESET ROWS="20%,*">
-         <FRAME src="logo.html" >
-         <FRAME src="main.html">
-</FRAMESET>
+        <frameset ROWS="20%,*">
+         <frame src="logo.html" >
+         <frame src="main.html">
+</framesetT>
 </html>
