--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -15,13 +15,15 @@
     <form>
         รหัสผ่าน: <input type="password" name="pwd">
         </form> 
-
-</body>
-<title>การแบ่งจอภาพ (FRAME)</title> 
+        
+title>การแบ่งจอภาพ (FRAME)</title> 
 <frameset COLS="100,600">
 <FRAME src="menu.html" >
         <frameset ROWS="20%,*">
          <frame src="logo.html" >
          <frame src="main.html">
 </framesetT>
+
+</body>
+<
 </html>
