--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -15,7 +15,9 @@
     <form>
         รหัสผ่าน: <input type="password" name="pwd">
         </form> 
-        
+
+        <i> love dog </i> 
+
 title>การแบ่งจอภาพ (FRAME)</title> 
 <frameset COLS="100,600">
 <FRAME src="menu.html" >
