--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -18,7 +18,7 @@
 
         <i> love dog </i> 
 
-title>การแบ่งจอภาพ (FRAME)</title> 
+<title>การแบ่งจอภาพ (FRAME)</title> 
 <frameset COLS="100,600">
 <FRAME src="menu.html" >
         <frameset ROWS="20%,*">
