--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -16,7 +16,11 @@
         รหัสผ่าน: <input type="password" name="pwd">
         </form> 
 
-
+        <form>
+            <input type="radio" name="like" value="like">ชอบ<br>
+            <input type="radio" name="like" value="don'tlike">ไม่ชอบ
+            </form> 
+            
 <mark>love dog dog </mark>
 <i> love dog </i> 
 
