--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -20,6 +20,11 @@
             <input type="radio" name="like" value="like">ชอบ<br>
             <input type="radio" name="like" value="don'tlike">ไม่ชอบ
             </form> 
+
+            <form>
+                <input type="checkbox" name="language" value="japanese">พูดภาษาญี่ปุ่นได้<br>
+                <input type="checkbox" name="language" value="english">พูดภาษาอังกฤษได้
+                </form> 
             
 <mark>love dog dog </mark>
 <i> love dog </i> 
