--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -25,6 +25,14 @@
                 <input type="checkbox" name="language" value="japanese">พูดภาษาญี่ปุ่นได้<br>
                 <input type="checkbox" name="language" value="english">พูดภาษาอังกฤษได้
                 </form> 
+
+                <form name="login" action="login.php" method="post">
+
+                    ชื่อ :<input type="text" name="username"/>
+                    รหัสผ่าน :<input type="passwordt" name="pwd"/>
+                    <input type="submit" value="เข้าระบบ"/>
+                    
+                    </form>             
             
 <mark>love dog dog </mark>
 <i> love dog </i> 
