--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -22,8 +22,8 @@
             </form> 
 
             <form>
-                <input type="checkbox" name="language" value="japanese">พูดภาษาญี่ปุ่นได้<br>
-                <input type="checkbox" name="language" value="english">พูดภาษาอังกฤษได้
+                <input type="checkbox" name="Animal" value="dog">ชอบสุนัข<br>
+                <input type="checkbox" name="Animal" value="cat">ชอบแมว
                 </form> 
 
                 <form name="login" action="login.php" method="post">
