--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -22,8 +22,8 @@
             </form> 
 
             <form>
-                <input type="checkbox" name="Animal" value="dog">ชอบสุนัข<br>
-                <input type="checkbox" name="Animal" value="cat">ชอบแมว
+                <input type="checkbox" name="Animal" value="dog">ชอบสุนัขพันธ์เล็ก<br>
+                <input type="checkbox" name="Animal" value="cat">ชอบสุนัขพันธ์ใหญ่
                 </form> 
 
                 <form name="login" action="login.php" method="post">
