--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -17,8 +17,8 @@
         </form> 
 
         <form>
-            <input type="radio" name="like" value="like">ชอบ<br>
-            <input type="radio" name="like" value="don'tlike">ไม่ชอบ
+            <input type="radio" name="like" value="like">ชอบเลี้ยงสัตว์<br>
+            <input type="radio" name="like" value="don'tlike">ไม่ชอบเลี้ยงสัตว์
             </form> 
 
             <form>
