--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -37,6 +37,19 @@
 <mark>love dog dog </mark>
 <i> love dog </i> 
 
+<table>
+    <caption> ชื่อตาราง </ caption >
+    <tr>
+                    <th> ข้อมูลส่วนหัว </th><th> ข้อมูลส่วนหัว </th>
+    </tr> 
+    <tr>
+                    <td> ข้อมูล1 </td><td> ข้อมูล2 </td>
+    </tr>
+    <tr>
+                    <td> ข้อมูล3 </td><td> ข้อมูล4 </td>
+    </tr>
+    </table> 
+
 </body>
 
 </html>
