--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -38,9 +38,9 @@
 <i> love dog </i> 
 
 <table>
-    <caption> ชื่อตาราง </ caption >
+    <caption> My dog </ caption >
     <tr>
-                    <th> ข้อมูลส่วนหัว </th><th> ข้อมูลส่วนหัว </th>
+                    <th> ชื่อสุนัข </th><th> ชื่อแมว </th>
     </tr> 
     <tr>
                     <td> ข้อมูล1 </td><td> ข้อมูล2 </td>
