--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -38,7 +38,7 @@
 <i> love dog </i> 
 
 
-<table>
+<table bordercolor="blue" width="60%" height="20%"bgcolor="yellow">
     <caption> My dog </ caption >
     <tr>
                     <th> ชื่อสุนัข </th><th> ชื่อแมว </th>
