--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -44,11 +44,14 @@
                     <th> ชื่อสุนัข </th><th> ชื่อแมว </th>
     </tr> 
     <tr>
-                    <td> ข้อมูล1 </td><td> ข้อมูล2 </td>
+                    <td>เทอรี่ </td><td> ข้อมูล </td>
     </tr>
     <tr>
-                    <td> ข้อมูล3 </td><td> ข้อมูล4 </td>
+                    <td> ข้าวสวย</td><td> ข้อมูล </td>
     </tr>
+    <tr>
+        <td> ข้าวปั้น</td><td> ข้อมูล </td>
+</tr>
     </table> 
 
 </body>
